hphp/hack/test/typecheck/const_attribute/redeclare_to_const_in_trait.php.exp
File "redeclare_to_const_in_trait.php", line 6, characters 17-17:
Some members in class `D` are incompatible with those declared in type `C` (Typing[4204])
  File "redeclare_to_const_in_trait.php", line 5, characters 30-32:
  This property is `__Const`
  File "redeclare_to_const_in_trait.php", line 4, characters 21-23:
  This property is not `__Const`
